[워들] 로직 완성
간단한 워들을 만들었습니다.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wordale</title>
+    <title>이거 해보셈</title>
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
@@ -18,7 +18,7 @@
       </div>
     </header>
     <main>
-      <div id="timer">time: 00:00</div>
+      <div id="timer">00:00</div>
       <div class="board-row row-0">
         <div class="board-column" data-index="00"></div>
         <div class="board-column" data-index="01"></div>
@@ -99,5 +99,6 @@
         <div class="keyboard-column wode" data-key="BACK"></div>
       </div>
     </footer>
+    <script src="js/index.js"></script>
   </body>
 </html>
